updated relative file paths for images and JavaScript paths & imported all 3 style sheets into index.css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!--CSS file-->
-  <link rel="stylesheet" href="./assets/css/card.css">
-  <link rel="stylesheet" href="./assets/css/form.css">
-  <link rel="stylesheet" href="./assets/css/header.css">
+  <link rel="stylesheet" href="src\css\index.css">
+  
 
   <title>Contact Cards</title>
 </head>
@@ -25,7 +24,7 @@
     <div class="container">
       <!--need to add values to the href and the alt-->
       <a class="navbar-brand" href="#">
-        <img id="logo" src="./assets/images/logo.png" alt="...">
+        <img id="logo" src="src\images\logo.png" alt="logo">
       </a>
       <!--move to the top of the div-->
       <h2 id="navbar-header">Contact Cards</h2>
@@ -68,13 +67,13 @@
             <p>Pick profile image below:</p>
             <input class="form-check-input" type="radio" data-src="Bear" name="exampleRadios" value="Bear" checked>
             <label class="form-check-label" for="exampleRadios1">
-              <img id="bearThumbnail" src="./assets/images/bear.png" alt="" width="60" height="60">
+              <img id="bearThumbnail" src="src\images\bear.png" alt="bear" width="60" height="60">
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input" type="radio" data-pic="Dog" name="exampleRadios" value="Dog">
             <label class="form-check-label" for="exampleRadios2">
-              <img id="dogThumbnail" src="./assets/images/dog.png" alt="" width="60" height="60">
+              <img id="dogThumbnail" src="src\images\dog.png" alt="dog" width="60" height="60">
             </label>
           </div>
         </div>
@@ -130,8 +129,8 @@
     crossorigin="anonymous"></script>
 
   <!-- Script files-->
-  <script src="assets/js/form.js"></script>
-  <script src="assets/js/submit.js"></script>
+  <script src="src\js\form.js"></script>
+  <script src="src\js\submit.js"></script>
 
 </body>
 
